A lot has changed, a lot of wip